# LociFind

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  PROJECT.md  README.md  ROADMAP.md  STATUS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-daemon.yml  release-macos.yml  release-windows.yml
apps/daemon/: Cargo.toml  README.md
apps/daemon/src/: cli.rs  lifecycle.rs  main.rs  preflight.rs
apps/daemon/tests/: e2e.rs
apps/daemon/tests/common/: mod.rs
apps/desktop/: README.md  index.html  package.json  使用手册.md
apps/desktop/src/: App.tsx  SearchView.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: uninstall-hooks.nsh
apps/desktop/src-tauri/src/: history.rs  main.rs  mcp_service.rs  model_download.rs  permissions.rs  privacy.rs  search.rs  settings.rs  shortcut.rs  status.rs  uninstall.rs  user_synonyms.rs
apps/desktop/src-tauri/src/search/: embedding_model.rs  fanout.rs  file_actions.rs  index_status.rs  model_fallback.rs  preview.rs  tests.rs
apps/locifind-cli/: Cargo.toml  README.md
apps/locifind-cli/src/: main.rs
docs/: LociFind知识产权保护计划书.md  LociFind项目注意事项与风险清单.md  README.md  harness-design.md  install.md  mac-session-todo.md  manual-test-scenarios.md  privacy-security.md  search-backend-trait.md  search-intent-schema.md  third-party-licenses.md  windows-setup.md  产品定位与竞品分析.md  本地个人搜索Agent项目计划书.md
docs/playbooks/: README.md  internal-audit-forensics.md  lawfirm-case-archive.md  offboarding-archive.md
docs/reviews/: 2026-05-25-roadmap-codex.md  2026-05-25-roadmap-gemini.md  2026-05-25-schema-trait.md  2026-06-25-beta-15b-9-upstream-issue-body.md  beta-00-repo-sanitization-2026-07-04.md  beta-08-lora-v0.md  beta-08-lora-v1.md  beta-08-smoke.md  beta-09a-windows-parity.md  beta-10-distribution-channels-2026-07-04.md  beta-13-g-annotation-conflicts.md  beta-13-rebaseline-decisions.md  beta-14-clarify-options-decision-2026-07-06.md  beta-14-gap-inventory-2026-07-04.md  beta-17-base-model-bakeoff.md  beta-33-cycle-7-index-mgmt-ux.md  beta-38-scaling-benchmark.md  beta-40-enterprise-eval-2026-07-04.md  beta-40-ingest-semantic-gap-fix-2026-07-04.md  beta-44-enterprise-eval-expansion-2026-07-04.md  beta-53-mcp-service-manual-verify.md  beta-53-mcp-service-verify-2026-07-07.md  beta-exit.md  beta-manual-verify-2026-07-07-windows.md  desktop-local-mcp-service-design.md  doc-realign-retrieval-foundation.md  enterprise-scenario-test-plan.md  enterprise-semantic-daemon-test-report-2026-07-03.md  enterprise-smoke-test-2026-07-03.md  moat-plan-2026-07-04.md  mvp-17-fallback-check.md  mvp-17-fallback-evals.md  mvp-25-lexicon-gaps.md  mvp-27-perf.md  mvp-exit.md  parser-v0.3.md  parser-v0.4-media-search-buckets.md  parser-v0.4.md  parser-v0.5.md  proto-exit.md  (+7 more)
docs/schema/: search-intent.v1.json
docs/session-logs/: ROADMAP-archive-2026-07.md  STATUS-archive-2026-06.md  STATUS-archive-2026-07.md  STATUS-archive-through-2026-06-03.md  gemini-mvp-15-16-summary.md  session-details-2026-07.md
docs/superpowers/plans/: 2026-05-26-parser-v0.3.md  2026-05-26-parser-v0.4-media-search.md  2026-05-27-beta-08-lora.md  2026-05-27-beta-08-main.md  2026-05-27-beta-08-smoke.md  2026-05-27-beta-08-v1.md  2026-05-27-parser-v0.5.md  2026-05-28-beta-09-quantize-baseline.md  2026-05-28-mvp-19-slice-b-tool-registry-wiring.md  2026-05-28-tracing-hooks-search-wiring.md  2026-05-29-context-memory-refine-wiring.md  2026-05-29-file-action-confirm-flow.md  2026-05-29-file-action-open-locate-wiring.md  2026-05-29-search-deps-refactor.md  2026-05-30-beta-15a-synonym-recall-eval.md  2026-05-30-beta-15d-spotlight-macos26-predicate.md  2026-05-30-beta-15e-gazetteer.md  2026-05-30-file-action-multi-target.md  2026-05-30-synonym-keyword-expansion.md  2026-06-01-beta-15e-multi-group-gazetteer.md  2026-06-01-beta-17-base-model-bakeoff.md  2026-06-01-en-recall-option2.md  2026-06-01-fallback-search-chain.md  2026-06-02-beta-01-music-metadata-index.md  2026-06-02-beta-01a-disk-wide-audio.md  2026-06-02-beta-02-office-pdf-content-index.md  2026-06-02-beta-03-ocr-image-index.md  2026-06-02-beta-04-result-normalizer.md  2026-06-02-beta-05-ranker.md  2026-06-02-beta-06-audit-log.md  2026-06-02-beta-07-index-scheduler.md  2026-06-03-beta-13-evals-1000.md  2026-06-04-beta-13-recall-regression-gazetteer-core.md  2026-06-04-search-recall-everything-fanout.md  2026-06-12-beta-23-model-fallback-integration.md  2026-06-13-beta-11d-user-synonym-dictionary.md  2026-06-13-beta-24-lora-retrain-keywords.md  2026-06-13-beta-25-llama-static-link-packaging.md  2026-06-15-beta-15b-1-semantic-recall-vertical.md  2026-06-15-beta-26-semantic-retrieval-spike.md  (+26 more)
docs/superpowers/specs/: 2026-05-26-parser-v0.4-media-search.md  2026-05-27-beta-08-lora-design.md  2026-05-27-beta-08-main-design.md  2026-05-27-beta-08-smoke-design.md  2026-05-27-beta-08-v1-design.md  2026-05-27-parser-v0.5.md  2026-05-28-beta-09-quantize-baseline-design.md  2026-05-28-mvp-19-slice-b-tool-registry-wiring-design.md  2026-05-28-tracing-hooks-search-wiring-design.md  2026-05-29-context-memory-refine-wiring-design.md  2026-05-29-file-action-confirm-flow-design.md  2026-05-29-search-deps-refactor-design.md  (+63 more)
platform/macos/: Cargo.toml  README.md
platform/macos/src/: lib.rs
platform/windows/: Cargo.toml  README.md
platform/windows/src/: lib.rs
resources/synonyms/: en.yaml  zh.yaml
scripts/: README.md  build-locifindd-llama.bat  ci.sh  gen-enterprise-file-fixtures.ps1  generate_enterprise_real_format_materials.py
scripts/hooks/: pre-commit
test-materials/enterprise-scenarios-raw/: README.md
tests/: README.md
tests/fixtures/: README.md  generate.sh  reindex.sh
training/datasets/: README.md
training/evals/: README.md
training/generators/: README.md
training/mlx-lora/: README.md
(+105 files in other folders)
