[package]
name = "locifindd"
description = "LociFind 团队归档 MCP daemon：headless 服务，包装 hybrid 检索给 MCP 客户端用。BETA-32 C3 起骨架。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "locifindd"
path = "src/main.rs"

[dependencies]
# 项目内 crate
locifind-server = { path = "../../packages/locifind-server" }
locifind-indexer = { path = "../../packages/indexer" }
locifind-model-runtime = { path = "../../packages/model-runtime" }
locifind-search-backend = { path = "../../packages/search-backends/common" }

# Async runtime（daemon 需要 multi-thread + signal + time）
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }

# HTTP server 框架（与 locifind-server 对齐 0.8）
axum = "0.8"

# CLI 解析
clap = { version = "4", features = ["derive", "env"] }

# 凭据封装（Bearer token）
secrecy = "0.10"

# TOML 配置文件解析
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1"

# 并发原语（与 locifind-server::ServerCtx 一致，main.rs 构造 ctx 时用）
parking_lot = "0.12"

# 时间戳（RuntimeState.indexed_at）
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
