[package]
name = "locifind-cli"
description = "LociFind 顶层原型 CLI：自然语言 SearchIntent 到 Spotlight 搜索"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util.workspace = true
locifind-intent-parser = { path = "../../packages/intent-parser" }
locifind-platform-macos = { path = "../../platform/macos" }
locifind-search-backend = { path = "../../packages/search-backends/common" }
locifind-search-backend-spotlight = { path = "../../packages/search-backends/spotlight" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
