[package]
name = "locifind-platform-macos"
description = "macOS platform adapters for LociFind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
locifind-search-backend = { path = "../../packages/search-backends/common" }
