[package]
name = "locifind-platform-windows"
description = "Windows platform adapters for LociFind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
dirs = "5"
locifind-search-backend = { path = "../../packages/search-backends/common" }
