[package]
name = "locifind-desktop"
version = "0.9.22"
description = "LociFind Desktop App"
authors = ["LociFind Project"]
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-global-shortcut = "2.0.0"
# BETA-27：系统文件夹选择对话框（设置页「索引目录」选择器从 JS 侧调 open()）。
tauri-plugin-dialog = "2"
# BETA-33 cycle 9：单实例锁——第二实例启动即退出并聚焦既有窗口，
# 防止两实例并发写同一 index.db / settings.json（2026-07-02 真机验证发现）。
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
locifind-harness = { path = "../../../packages/harness" }

# MVP-19 search command：复用 intent-parser + search-backends
locifind-intent-parser = { path = "../../../packages/intent-parser" }
locifind-search-backend = { path = "../../../packages/search-backends/common" }

# BETA-04 多源融合：本地索引后端 + reindex 默认根目录（跨平台）
locifind-local-index-backend = { path = "../../../packages/search-backends/local-index" }
locifind-indexer = { path = "../../../packages/indexer" }
dirs = "5"

# BETA-05 多源结果排序
locifind-ranker = { path = "../../../packages/ranker" }

# BETA-06 审计日志时间戳
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# BETA-23 模型 fallback：model-runtime 本就是 intent-parser 的传递依赖，直依赖零额外成本；
# tokio "time" 供推理同步等待超时（tokio::time::timeout）。
locifind-model-runtime = { path = "../../../packages/model-runtime" }
# BETA-31：model_download 用 tokio::fs + AsyncWriteExt，需 fs + io-util；rt-multi-thread 让
# tauri command 的 reqwest stream 在多线程 runtime 运行（tauri 主进程默认多线程 runtime）。
# BETA-53：本机 MCP 服务需 net（TcpListener::bind 同步拿端口占用错误）+ sync（oneshot 关停信号 + Mutex 运行态）。
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "io-util", "net", "sync"] }

# BETA-15B-1 语义召回：embedding 索引 + 向量检索后端（包名 locifind-semantic-index）。
locifind-search-backend-semantic = { package = "locifind-semantic-index", path = "../../../packages/search-backends/semantic-index" }

# BETA-15B-3 A-2：直依赖 result-normalizer，供 settings.rs 读取 DEFAULT_SEMANTIC_WEIGHT。
locifind-result-normalizer = { path = "../../../packages/result-normalizer" }

# BETA-53：桌面内嵌「本机 MCP 服务」——复用 server 的 axum router 工厂 + attach_readonly
# 只读挂载桌面 index.db，起 127.0.0.1 服务把 hybrid 检索经 MCP 暴露给本机 LLM 客户端。
locifind-server = { path = "../../../packages/locifind-server" }
# 凭据类型（bearer token 明文包 SecretString，Debug 输出 REDACTED、不泄漏进日志）。
secrecy = "0.10"
# BETA-53：随机 bearer token（OS CSPRNG，32 字节 → 64 hex 字符）。
getrandom = "0.2"

# BETA-31：模型下载 GUI（reqwest stream + futures-util StreamExt）。
# default-features=false 关 default-tls 避免 openssl 平台依赖、用 pure-rust rustls。
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# BETA-31-v3 cycle 2（v0.8.3）：诊断日志栈。默认 INFO 级别写文件到
# <locifind_data_dir>/locifind.log（daily 滚动），env LOCIFIND_LOG 可覆盖
# 级别（trace/debug/info/warn/error/off + per-target 形如 "locifind_desktop=debug"）。
# tracing-appender::non_blocking 保 WorkerGuard 在 main() 范围内 alive 保证 flush。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
locifind-search-backend-spotlight = { path = "../../../packages/search-backends/spotlight" }
locifind-platform-macos = { path = "../../../platform/macos" }

[target.'cfg(target_os = "windows")'.dependencies]
locifind-search-backend-windows-search = { path = "../../../packages/search-backends/windows-search" }
locifind-search-backend-everything = { path = "../../../packages/search-backends/everything" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "io-util"] }
futures = "0.3"
tempfile = "3"
# BETA-31：model_download.rs 单测 mock HTTP server。注：spec 原写 `httptest_lite` 不存在、
# 真实 crate 名为 `httptest`（v0.16）。
httptest = "0.16"

[features]
# BETA-23：真实模型推理（llama-cpp 后端，构建需 cmake）。日常开发/CI 不开，
# Release 构建与真机验证开。关闭时模型 fallback 静默降级为 parser-only。
model-fallback = ["locifind-model-runtime/llama-cpp"]
# macOS 真机：metal 加速。
model-fallback-metal = ["model-fallback", "locifind-model-runtime/metal"]

# BETA-15B-1：语义召回（embedding 索引 + 向量检索）。默认关，开启需 cmake。
semantic-recall = ["locifind-model-runtime/llama-cpp"]
semantic-recall-metal = ["semantic-recall", "locifind-model-runtime/metal"]

# 注：用 unwind（非 abort），让 indexer 的 catch_unwind 能兜住提取器（pdf-extract 等）
# 对畸形文件的 panic——否则 abort 下整个 app 崩（BETA-01A/02 真机 reindex 暴露）。
[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
